--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   DOCKER_USERNAME: mostafag95
-  DOCKER_PASSWORD: ${{ secrets.PASSWORD }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
   build:
@@ -18,14 +18,13 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        tags: "${{ env.DOCKER_USERNAME }}/django:${{ env.GITHUB_SHA }}"
+      run: |
+        docker build -t "$DOCKER_USERNAME/django:$GITHUB_SHA" .
+        docker images
+
+    - name: Login to Docker Hub
+      run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
     - name: Push Docker Image
-      uses: docker/push-action@v2
-      with:
-        tags: "${{ env.DOCKER_USERNAME }}/django:${{ env.GITHUB_SHA }}"
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ env.PASSWORD }}
+      run: |
+        docker push "$DOCKER_USERNAME/django:$GITHUB_SHA"
