--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,3 +1,4 @@
+
 name: Build and Push Docker Image
 
 on:
@@ -17,14 +18,19 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Build Docker Image
-      run: |
-        docker build -t "$DOCKER_USERNAME/django:$GITHUB_SHA" .
-        docker images
-
     - name: Login to Docker Hub
-      run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin -H
-      
+      uses: docker/login-action@v1
+      with:
+        username: ${{ env.DOCKER_USERNAME }}
+        password: ${{ env.DOCKER_PASSWORD }}
+
+    - name: Build Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        tags: "${{ env.DOCKER_USERNAME }}/django:${{ env.GITHUB_SHA }}"
+
     - name: Push Docker Image
-      run: |
-        docker push "$DOCKER_USERNAME/django:$GITHUB_SHA"
+      uses: docker/push-action@v2
+      with:
+        tags: "${{ env.DOCKER_USERNAME }}/django:${{ env.GITHUB_SHA }}"
