--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,19 +18,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ env.DOCKER_PASSWORD }}
-
     - name: Build Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        tags: "${{ env.DOCKER_USERNAME }}/django:${{ env.GITHUB_SHA }}"
+      run: |
+        docker build -t "$DOCKER_USERNAME/django:${{ env.GITHUB_SHA }}" .
+
+    - name: Login to Docker Hub
+      run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
     - name: Push Docker Image
-      uses: docker/push-action@v2
-      with:
-        tags: "${{ env.DOCKER_USERNAME }}/django:${{ env.GITHUB_SHA }}"
+      run: docker push "$DOCKER_USERNAME/django:${{ env.GITHUB_SHA }}"
